# UW-Automation-Program

./: .anvil_editor.yaml  .deepsource.toml  .gitignore  APP_PREVIEW.md  CombinedPythonFile.py  DEPLOYMENT_GUIDE.md  EXECUTIVE_SUMMARY.md  FRAMEWORK_COMPARISON.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IOTechDM Claim Detail.csv  LICENSE  MIGRATION_SUMMARY.md  README.md  README_FASTAPI.md  README_STREAMLIT.md  README_WEB_CONVERSION.md  RUNNING_SCRIPTS.md  STREAMLIT_DEPLOYMENT.md  TROUBLESHOOTING.md  WEB_CONVERSION_ANALYSIS.md  __init__.py  app.py  app.py.backup  bg_disruption.py  check_file_paths.py  cleanup.ps1  config.json  deepsource.toml  diagnostic_tool.py  diagnostics_gui.py  documentation_for_updates.py  epls_lbl.py  error_resolution_summary.py  example.db  fastapi_app.py  file_paths.json  generate_pdf.bat  generate_troubleshooting_pdf.py  merge.py  (+19 more)
.github/: .gitignore  CHANGELOG.md  CODEOWNERS
.streamlit/: config.toml
B.o.B/: requirements.txt
Repricing-Automation-Program-main/: .gitignore  app.py  bg_disruption.py  config.json  epls_lbl.py  file_paths.json  merge.py  openmdf_bg.py  openmdf_tier.py  sharx_lbl.py  tier_disruption.py  utils.py
client_code/: audit_helper.py  bg_disruption.py  check_file_paths.py  data_processor.py  diagnostic_tool.py  error_analysis_tool.py  error_reporter.py  log_manager.py  profile_runner.py  rx_lbl.py  safe_error_analysis.py  sharx_lbl.py  template_processor.py  tier_disruption.py  ui_builder.py  user_support_report.py
config/: ONEDRIVE_SETUP.md  app_config.py  config.json  config_loader.py  file_paths.json  improved_config_manager.py
diagnositcs/: diagnostic_tool.py  run_diagnostics.bat
docs/: conf.py  index.rst  modules.rst
modules/: __init__.py  anthropic_check.py  audit_helper.py  bg_disruption.py  check_audit.py  claude.py  data_processor.py  data_processor.py.backup  diagnostic_tool.py  diagnostics_gui.py  epls_lbl.py  error_analysis_tool.py  error_reporter.py  file_processor.py  log_manager.py  merge.py  mp_helpers.py  openmdf_bg.py  openmdf_tier.py  pdf_to_excel.py  process_manager.py  profile_runner.py  safe_error_analysis.py  sharx_lbl.py  template_processor.py  tier_disruption.py  ui_builder.py  user_support_report.py
resources/: AUDIT_SYSTEM_GUIDE.md  EXCEL_ERROR_TROUBLESHOOTING.md  IMPORT_FIX_SUMMARY.md  Makefile  PHARMACY_EXCLUSION_STANDARDIZATION_SUMMARY.md  PYTHON_M_FLAG_CHEATSHEET.md  README.txt  RowID_Error_Troubleshooting_Guide.md  SETUP_GUIDE.txt  TROUBLESHOOTING.md  TROUBLESHOOTING_v2.md  app.py.backup  brendanreamer_paths.json  brettbauer_paths.json  dannybushnell_paths.json  generate_audit_guide_pdf.py  generate_audit_guide_pdf_simple.py  generate_code_quality_checklist_pdf.py  generate_project_documentation.py  generate_readme_pdf.py  generate_readme_pdf_new.py  generate_setup_pdf.py  generate_setup_pdf_new.py  generate_walkthrough_pdf.py  generate_walkthrough_pdf_new.py  mitchellfrederick_paths.json  profile_stats.prof  repricing_walkthrough.md  requirements.txt  update_audit_log_references.py  user_setup v2.md
scripts/: combine_parquet.py  validate-requirements.ps1
static/: index.html
tests/: conftest.py  create_test_data.py  debug_exclusion.py  debug_matching.py  debug_standardization.py  deployment_test.py  emergency_rowid_fix.py  emergency_rowid_fixer.py  error_resolution_summary.py  rowid_error_analysis_20250717_091043.json  rowid_error_analyzer.py  test_all_files_all_folders.py  test_all_module_processes.py  test_app.py  test_bg_disruption.py  test_directory_structure.py  test_epls_lbl.py  test_exclusion_fix.py  test_file_paths.py  test_file_processor_output.py  test_file_support.py  test_import_all_files.py  test_imports.py  test_lbl_overwrite_protection.py  test_match.py  test_merge.py  test_nabp_lookup.py  test_openmdf_bg.py  test_openmdf_tier.py  test_pharmacy_exclusion.py  test_rowid_fix.py  test_rx_repricing_wf_template.py  test_sharx_lbl.py  test_template_pasting.py  test_tier_disruption.py  test_write_shared_log.py  tier_disruption.py  tmp_import_test.py  unittest.mock
ui/: ui_components.py
utils/: excel_utils.py  utils.py  (+2 more)
(+67 files in other folders)
