[project]
name = "uw-automation-program"
version = "0.1.0"
description = ""
authors = [
    {name = "Damion Morrison"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "anyio (==4.9.0)",
    "black (==25.1.0)",
    "blinker (==1.9.0)",
    "botocore (==1.39.4)",
    "brotli (==1.1.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.3)",
    "certifi (==2025.7.14)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "cleo (==2.1.0)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "contourpy (==1.3.2)",
    "cramjam (==2.10.0)",
    "crashtest (==0.4.1)",
    "cryptography (==45.0.5)",
    "cssselect2 (==0.8.0)",
    "customtkinter (==5.2.2)",
    "cycler (==0.12.1)",
    "darkdetect (==0.8.0)",
    "distlib (==0.4.0)",
    "distro (==1.9.0)",
    "dulwich (==0.22.8)",
    "emoji (==2.14.1)",
    "et-xmlfile (==2.0.0)",
    "fastjsonschema (==2.21.1)",
    "fastparquet (==2024.11.0)",
    "filelock (==3.18.0)",
    "findpython (==0.6.3)",
    "flask (==3.1.1)",
    "fonttools (==4.58.5)",
    "fpdf (==1.7.2)",
    "fsspec (==2025.5.1)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "installer (==0.7.0)",
    "isort (==6.0.1)",
    "itsdangerous (==2.2.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.2.1)",
    "jinja2 (==3.1.6)",
    "jmespath (==1.0.1)",
    "keyring (==25.6.0)",
    "kiwisolver (==1.4.8)",
    "llvmlite (==0.44.0)",
    "markdown (==3.8.2)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.10.3)",
    "mccabe (==0.7.0)",
    "more-itertools (==10.7.0)",
    "mouseinfo (==0.1.3)",
    "msgpack (==1.1.1)",
    "mypy-extensions (==1.1.0)",
    "numba (==0.61.2)",
    "numpy (==2.2.6)",
    "openpyxl (==3.1.5)",
    "packaging (==25.0)",
    "pandas (==2.3.1)",
    "pathspec (==0.12.1)",
    "pbs-installer (==2025.7.23)",
    "pdfminer-six (==20250506)",
    "pdfplumber (==0.11.7)",
    "pillow (==11.3.0)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.8)",
    "pluggy (==1.6.0)",
    "plyer (==2.1.0)",
    "poetry (==2.1.3)",
    "poetry-core (==2.1.3)",
    "psutil (==7.0.0)",
    "pyarrow (==20.0.0)",
    "pyautogui (==0.9.54)",
    "pycodestyle (==2.13.0)",
    "pycparser (==2.22)",
    "pydyf (==0.11.0)",
    "pygetwindow (==0.0.9)",
    "pygments (==2.19.2)",
    "pyjokes (==0.8.3)",
    "pymsgbox (==1.0.9)",
    "pyparsing (==3.2.3)",
    "pypdf2 (==3.0.1)",
    "pypdfium2 (==4.30.0)",
    "pyperclip (==1.9.0)",
    "pyphen (==0.17.2)",
    "pyproject-hooks (==1.2.0)",
    "pyrect (==0.2.0)",
    "pyscreeze (==1.0.1)",
    "pytest (==8.4.1)",
    "python-dateutil (==2.9.0.post0)",
    "pytweening (==1.2.0)",
    "pytz (==2025.2)",
    "pywin32 (==310)",
    "pywin32-ctypes (==0.2.3)",
    "rapidfuzz (==3.13.0)",
    "reportlab (==4.4.2)",
    "requests (==2.32.4)",
    "requests-toolbelt (==1.0.0)",
    "ruff (==0.12.0)",
    "s3transfer (==0.13.0)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "tabula-py (==2.10.0)",
    "tinycss2 (==1.4.0)",
    "tinyhtml5 (==2.0.0)",
    "tomlkit (==0.13.3)",
    "trove-classifiers (==2025.5.9.12)",
    "tzdata (==2025.2)",
    "virtualenv (==20.32.0)",
    "weasyprint (==65.1)",
    "webencodings (==0.5.1)",
    "werkzeug (==3.1.3)",
    "xlsxwriter (==3.2.5)",
    "xlwings (==0.33.15)",
    "zopfli (==0.2.3.post1)",
    "zstandard (==0.23.0)"
]



[tool.poetry]
packages = [
    { include = "config" },
    { include = "modules" },
    { include = "tests" },
    { include = "ui" },
    { include = "utils" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
pywin32 = { version = "^310", markers = "sys_platform == 'win32'" }
